<resources>
    <string name="app_name">MySQL Client</string>
    <string name="login_progress_connecting">Connecting…</string>
    <string name="prompt_host">Host</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_database">Database (optional)</string>
    <string name="prompt_port">Port (3306)</string>
    <string name="action_connect">Connect</string>
    <string name="error_field_required">Field required</string>
</resources>
